--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<a href="contact me.html">Contact me
+<a href="contact-me.html">Contact me
 <link rel="stylesheet" href="style.css">
 <title>Flamenco Music</title>
 
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-<h1>Welcome to listen the best artists of flamneco guitar music</h1> 
+<h1>Welcome to listen the best artists of flamenco guitar music</h1> 
 <a href="#flamenco">Click here to read more about flamenco history</a>
 <h3><u>Click to choose the artists you want to listen</u></h3>
 
