--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@ them better when putting the mback together.
                  Experienced in writing test documentation (STP, STD, STR).
 				  Very good understanding of QA methodologies 
 				  (Agile,Waterfall).
+				  Passion for testing.
                 </p>
               </div>
             </div>
